[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/demon.png" type="Texture" id=1]
[ext_resource path="res://demon/demon.gd" type="Script" id=2]
[ext_resource path="res://behaviours/target_velocity_behaviour.gd" type="Script" id=3]

[sub_resource type="Animation" id=2]
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("demon:flip_v")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Damage"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("demon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 10, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 74.5428
height = 69.6719

[sub_resource type="CapsuleShape2D" id=6]
radius = 90.4098
height = 41.028

[node name="Demon" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="demon" type="Sprite" parent="."]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )

[node name="AnimationPlayerWalk" type="AnimationPlayer" parent="."]
autoplay = "Walk"
anims/Walk = SubResource( 2 )

[node name="AnimationPlayerDamage" type="AnimationPlayer" parent="."]
anims/Damage = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.943909, -1.78473 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="AreaDeAtaque" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDeAtaque"]
position = Vector2( 111.633, 0.32605 )
shape = SubResource( 6 )

[node name="TargetVelocityBehaviour" type="Node2D" parent="."]
script = ExtResource( 3 )
